# appsflyer-mcp

./: .env  .gitignore  LICENSE  README.md  cursor-mcp-config.json  example.env  pyproject.toml  run_server.py  setup.py
appsflyer_mcp/: __init__.py  __main__.py  main.py  server.py
tests/: __init__.py  test_server.py
